--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -5,9 +5,9 @@
       <a routerLink="/" class="nav-item nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
         <i class="fa fa-home"></i> Home
       </a>
-      <a routerLink="/about" class="nav-item nav-link" routerLinkActive="active">
-        <i class="fa fa-info-circle"></i> About
-      </a>
+      <!--<a routerLink="/about" class="nav-item nav-link" routerLinkActive="active">-->
+        <!--<i class="fa fa-info-circle"></i> About-->
+      <!--</a>-->
     </div>
   </nav>
 
