added find-ride map + show routes

--- a/client/app/find-ride/find-ride.component.html
+++ b/client/app/find-ride/find-ride.component.html
@@ -1,23 +1,61 @@
+
 <div class="container" onload="locate()">
-  <h1>HERE</h1>
-  <sebm-google-map
-          [latitude]="latitude"
-          [longitude]="longitude"
-          [scrollwheel]="false"
-          [zoom]="zoom"
-          [styles]="mapCustomStyles">
-    <sebm-google-map-directions
-            [origin]="origin"
-            [destination]="destination">
-    </sebm-google-map-directions>
+  <!--<h1>Angular 2 Google Map Direction Display</h1>-->
+  <div class="form-group">
+    <input placeholder="Enter source location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control" #pickupInput [formControl]="destinationInput">
+    <input placeholder="Enter destination" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control" #pickupOutput [formControl]="destinationOutput" >
+  </div>
+  <button class="btn btn-default" (click)="addRoute()">Add Route</button>
+  <sebm-google-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="false" [zoom]="zoom" [styles]="mapCustomStyles">
+    <!--<sebm-google-map-marker [latitude]="latitude" [longitude]="longitude" [iconUrl]="iconurl">-->
+    <!--<sebm-google-map-info-window>-->
+    <!--<strong>InfoWindow content</strong>-->
+    <!--</sebm-google-map-info-window>-->
+    <!--</sebm-google-map-marker>-->
+    <sebm-google-map-direction [origin]="origin" [destination]="destination"></sebm-google-map-direction>
+
   </sebm-google-map>
+  <div id="map_canvas" style="width:700px; height:500px; margin-left:80px;"></div>
 
   <div class="list-group" *ngFor="let x of routes; let i = index">
     <button
             class="list-group-item list-group-item-action"
-            (click)="showRide(i)">
+            (click)="tempClicked(i)">
       From {{ x.origin.formatted_address }} to {{ x.destination.formatted_address }}
     </button>
   </div>
 
 </div>
+
+
+<!--<sebm-google-map [latitude]="lat" [longitude]="lng">-->
+<!--&lt;!&ndash;<sebm-google-map-marker [zoom]="zoom" [latitude]="lat" [longitude]="lng"></sebm-google-map-marker>&ndash;&gt;-->
+<!--<sebm-google-map-directions [origin]="origin" [destination]="destination"></sebm-google-map-directions>-->
+
+<!--</sebm-google-map>-->
+
+
+
+<!--<div class="container" onload="locate()">-->
+  <!--<h1>HERE</h1>-->
+  <!--<sebm-google-map-->
+          <!--[latitude]="latitude"-->
+          <!--[longitude]="longitude"-->
+          <!--[scrollwheel]="false"-->
+          <!--[zoom]="zoom"-->
+          <!--[styles]="mapCustomStyles">-->
+    <!--<sebm-google-map-directions-->
+            <!--[origin]="origin"-->
+            <!--[destination]="destination">-->
+    <!--</sebm-google-map-directions>-->
+  <!--</sebm-google-map>-->
+
+  <!--<div class="list-group" *ngFor="let x of routes; let i = index">-->
+    <!--<button-->
+            <!--class="list-group-item list-group-item-action"-->
+            <!--(click)="showRide(i)">-->
+      <!--From {{ x.origin.formatted_address }} to {{ x.destination.formatted_address }}-->
+    <!--</button>-->
+  <!--</div>-->
+
+<!--</div>-->
