added home template + join route with user in route service

--- a/client/app/find-ride/find-ride.component.html
+++ b/client/app/find-ride/find-ride.component.html
@@ -1,61 +1,66 @@
 
-<div class="container" onload="locate()">
-  <!--<h1>Angular 2 Google Map Direction Display</h1>-->
-  <div class="form-group">
-    <input placeholder="Enter source location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control" #pickupInput [formControl]="destinationInput">
-    <input placeholder="Enter destination" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control" #pickupOutput [formControl]="destinationOutput" >
-  </div>
-  <button class="btn btn-default" (click)="addRoute()">Add Route</button>
-  <sebm-google-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="false" [zoom]="zoom" [styles]="mapCustomStyles">
-    <!--<sebm-google-map-marker [latitude]="latitude" [longitude]="longitude" [iconUrl]="iconurl">-->
-    <!--<sebm-google-map-info-window>-->
-    <!--<strong>InfoWindow content</strong>-->
-    <!--</sebm-google-map-info-window>-->
-    <!--</sebm-google-map-marker>-->
-    <sebm-google-map-direction [origin]="origin" [destination]="destination"></sebm-google-map-direction>
-
-  </sebm-google-map>
-  <div id="map_canvas" style="width:700px; height:500px; margin-left:80px;"></div>
-
-  <div class="list-group" *ngFor="let x of routes; let i = index">
-    <button
-            class="list-group-item list-group-item-action"
-            (click)="tempClicked(i)">
-      From {{ x.origin.formatted_address }} to {{ x.destination.formatted_address }}
-    </button>
-  </div>
-
-</div>
-
-
-<!--<sebm-google-map [latitude]="lat" [longitude]="lng">-->
-<!--&lt;!&ndash;<sebm-google-map-marker [zoom]="zoom" [latitude]="lat" [longitude]="lng"></sebm-google-map-marker>&ndash;&gt;-->
-<!--<sebm-google-map-directions [origin]="origin" [destination]="destination"></sebm-google-map-directions>-->
-
-<!--</sebm-google-map>-->
-
-
-
 <!--<div class="container" onload="locate()">-->
-  <!--<h1>HERE</h1>-->
-  <!--<sebm-google-map-->
-          <!--[latitude]="latitude"-->
-          <!--[longitude]="longitude"-->
-          <!--[scrollwheel]="false"-->
-          <!--[zoom]="zoom"-->
-          <!--[styles]="mapCustomStyles">-->
-    <!--<sebm-google-map-directions-->
-            <!--[origin]="origin"-->
-            <!--[destination]="destination">-->
-    <!--</sebm-google-map-directions>-->
+  <!--&lt;!&ndash;<h1>Angular 2 Google Map Direction Display</h1>&ndash;&gt;-->
+  <!--<div class="form-group">-->
+    <!--<input placeholder="Enter source location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control" #pickupInput [formControl]="destinationInput">-->
+    <!--<input placeholder="Enter destination" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" class="form-control" #pickupOutput [formControl]="destinationOutput" >-->
+  <!--</div>-->
+  <!--<button class="btn btn-default" (click)="addRoute()">Add Route</button>-->
+  <!--<sebm-google-map [latitude]="latitude" [longitude]="longitude" [scrollwheel]="false" [zoom]="zoom" [styles]="mapCustomStyles">-->
+    <!--&lt;!&ndash;<sebm-google-map-marker [latitude]="latitude" [longitude]="longitude" [iconUrl]="iconurl">&ndash;&gt;-->
+    <!--&lt;!&ndash;<sebm-google-map-info-window>&ndash;&gt;-->
+    <!--&lt;!&ndash;<strong>InfoWindow content</strong>&ndash;&gt;-->
+    <!--&lt;!&ndash;</sebm-google-map-info-window>&ndash;&gt;-->
+    <!--&lt;!&ndash;</sebm-google-map-marker>&ndash;&gt;-->
+    <!--<sebm-google-map-direction [origin]="origin" [destination]="destination"></sebm-google-map-direction>-->
+
   <!--</sebm-google-map>-->
 
-  <!--<div class="list-group" *ngFor="let x of routes; let i = index">-->
-    <!--<button-->
-            <!--class="list-group-item list-group-item-action"-->
-            <!--(click)="showRide(i)">-->
-      <!--From {{ x.origin.formatted_address }} to {{ x.destination.formatted_address }}-->
-    <!--</button>-->
-  <!--</div>-->
+  <!--&lt;!&ndash;<div class="list-group" *ngFor="let x of routes; let i = index">&ndash;&gt;-->
+    <!--&lt;!&ndash;<button&ndash;&gt;-->
+            <!--&lt;!&ndash;class="list-group-item list-group-item-action"&ndash;&gt;-->
+            <!--&lt;!&ndash;(click)="tempClicked(i)">&ndash;&gt;-->
+      <!--&lt;!&ndash;{{ x.origin.formatted_address }} -> {{ x.destination.formatted_address }}&ndash;&gt;-->
+    <!--&lt;!&ndash;</button>&ndash;&gt;-->
+  <!--&lt;!&ndash;</div>&ndash;&gt;-->
 
 <!--</div>-->
+<!--<footer class="ridein-footer mdl-mega-footer">-->
+    <!--<div class="mdl-mega-footer&#45;&#45;middle-section">-->
+        <!--<p class="mdl-typography&#45;&#45;font-light">© 2017 RideIn</p>-->
+    <!--</div>-->
+<!--</footer>-->
+
+
+
+<!--&lt;!&ndash;<sebm-google-map [latitude]="lat" [longitude]="lng">&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;<sebm-google-map-marker [zoom]="zoom" [latitude]="lat" [longitude]="lng"></sebm-google-map-marker>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;<sebm-google-map-directions [origin]="origin" [destination]="destination"></sebm-google-map-directions>&ndash;&gt;-->
+
+<!--&lt;!&ndash;</sebm-google-map>&ndash;&gt;-->
+
+
+
+<!--&lt;!&ndash;<div class="container" onload="locate()">&ndash;&gt;-->
+  <!--&lt;!&ndash;<h1>HERE</h1>&ndash;&gt;-->
+  <!--&lt;!&ndash;<sebm-google-map&ndash;&gt;-->
+          <!--&lt;!&ndash;[latitude]="latitude"&ndash;&gt;-->
+          <!--&lt;!&ndash;[longitude]="longitude"&ndash;&gt;-->
+          <!--&lt;!&ndash;[scrollwheel]="false"&ndash;&gt;-->
+          <!--&lt;!&ndash;[zoom]="zoom"&ndash;&gt;-->
+          <!--&lt;!&ndash;[styles]="mapCustomStyles">&ndash;&gt;-->
+    <!--&lt;!&ndash;<sebm-google-map-directions&ndash;&gt;-->
+            <!--&lt;!&ndash;[origin]="origin"&ndash;&gt;-->
+            <!--&lt;!&ndash;[destination]="destination">&ndash;&gt;-->
+    <!--&lt;!&ndash;</sebm-google-map-directions>&ndash;&gt;-->
+  <!--&lt;!&ndash;</sebm-google-map>&ndash;&gt;-->
+
+  <!--&lt;!&ndash;<div class="list-group" *ngFor="let x of routes; let i = index">&ndash;&gt;-->
+    <!--&lt;!&ndash;<button&ndash;&gt;-->
+            <!--&lt;!&ndash;class="list-group-item list-group-item-action"&ndash;&gt;-->
+            <!--&lt;!&ndash;(click)="showRide(i)">&ndash;&gt;-->
+      <!--&lt;!&ndash;From {{ x.origin.formatted_address }} to {{ x.destination.formatted_address }}&ndash;&gt;-->
+    <!--&lt;!&ndash;</button>&ndash;&gt;-->
+  <!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
