--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,23 +1,105 @@
- <nav *ngIf="isLoggedIn" class="navbar navbar-dark bg-primary">
-    <div class="nav navbar-nav">
-      <a routerLink="/" class="nav-item nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-        <i class="fa fa-home"></i> Welcome
-      </a>
-        <a routerLink="/route/find" class="nav-item nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-            <i class="fa fa-map-marker" aria-hidden="true"></i> Find Ride
-        </a>
-        <a routerLink="/route/post" class="nav-item nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-            <i class="fa fa-location-arrow" aria-hidden="true"></i> Offer Ride
-        </a>
+<head >
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="RideIn">
+    <meta name="description" content="Your Ride Sharing App">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>RideIn</title>
 
-        <a class="nav-item nav-link"  (click)="logout()">
-            <i class="fa fa-sign-out" aria-hidden="true"></i>Logout
-        </a>
-      <!--<a routerLink="/about" class="nav-item nav-link" routerLinkActive="active">-->
-      <!--<i class="fa fa-info-circle"></i> About-->
-      <!--</a>-->
+    <!-- Page styles -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css">
+
+</head>
+<body *ngIf="isLoggedIn">
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <div class="ridein-header mdl-layout__header mdl-layout__header--waterfall">
+        <div class="mdl-layout__header-row">
+        <span class="android-title mdl-layout-title">
+            <img class="ridein-logo-image" src="">
+          </span>
+            <!-- Add spacer, to align navigation to the right in desktop -->
+            <div class="ridein-header-spacer mdl-layout-spacer"></div>
+            <!-- Navigation -->
+            <div class="ridein-navigation-container">
+                <nav class="ridein-navigation mdl-navigation">
+                    <a routerLink="/" class="mdl-navigation__link mdl-typography--text-uppercase" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+                        <i class="fa fa-home"></i> Welcome
+                    </a>
+                    <a routerLink="/route/find" class="mdl-navigation__link mdl-typography--text-uppercase" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+                        <i class="fa fa-map-marker" aria-hidden="true"></i> Find Ride
+                    </a>
+                    <a routerLink="/route/post" class="mdl-navigation__link mdl-typography--text-uppercase" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+                        <i class="fa fa-location-arrow" aria-hidden="true"></i> Offer Ride
+                    </a>
+
+                    <a class="mdl-navigation__link mdl-typography--text-uppercase ridein-link" routerLinkActive="active" (click)="logout()">
+                        <i class="fa fa-sign-out" aria-hidden="true" ></i>Logout
+                    </a>
+                </nav>
+            </div>
+        </div>
     </div>
-</nav>
-<div class="app-content">
-  <router-outlet></router-outlet>
+
 </div>
+<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+</body>
+
+<div class="app-content">
+    <router-outlet></router-outlet>
+</div>
+
+<!--&lt;!&ndash; Always shows a header, even in smaller screens. &ndash;&gt;-->
+<!--<div  class="mdl-layout mdl-js-layout mdl-layout&#45;&#45;fixed-header">-->
+<!--<header class="mdl-layout__header">-->
+<!--<div class="mdl-layout__header-row">-->
+<!--&lt;!&ndash; Title &ndash;&gt;-->
+<!--<span class="mdl-layout-title">Title</span>-->
+<!--&lt;!&ndash; Add spacer, to align navigation to the right &ndash;&gt;-->
+<!--<div class="mdl-layout-spacer"></div>-->
+<!--&lt;!&ndash; Navigation. We hide it in small screens. &ndash;&gt;-->
+<!--<nav class="mdl-navigation mdl-layout&#45;&#45;large-screen-only">-->
+<!--<a routerLink="/" class="mdl-navigation__link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">-->
+<!--<i class="fa fa-home"></i> Welcome-->
+<!--</a>-->
+<!--<a routerLink="/route/find" class="mdl-navigation__link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">-->
+<!--<i class="fa fa-map-marker" aria-hidden="true"></i> Find Ride-->
+<!--</a>-->
+<!--<a routerLink="/route/post" class="mdl-navigation__link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">-->
+<!--<i class="fa fa-location-arrow" aria-hidden="true"></i> Offer Ride-->
+<!--</a>-->
+
+<!--<a class="mdl-navigation__link" routerLinkActive="active" (click)="logout()">-->
+<!--<i class="fa fa-sign-out" aria-hidden="true"></i>Logout-->
+<!--</a>-->
+<!--</nav>-->
+<!--</div>-->
+<!--</header>-->
+<!--<main class="mdl-layout__content">-->
+<!--<div class="page-content">&lt;!&ndash; Your content goes here &ndash;&gt;</div>-->
+<!--</main>-->
+<!--</div>-->
+
+
+
+<!--<nav *ngIf="isLoggedIn" class="navbar navbar-dark bg-primary">-->
+    <!--<div class="nav navbar-nav">-->
+      <!--<a routerLink="/" class="nav-item nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">-->
+        <!--<i class="fa fa-home"></i> Welcome-->
+      <!--</a>-->
+        <!--<a routerLink="/route/find" class="nav-item nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">-->
+            <!--<i class="fa fa-map-marker" aria-hidden="true"></i> Find Ride-->
+        <!--</a>-->
+        <!--<a routerLink="/route/post" class="nav-item nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">-->
+            <!--<i class="fa fa-location-arrow" aria-hidden="true"></i> Offer Ride-->
+        <!--</a>-->
+
+        <!--<a class="nav-item nav-link"  (click)="logout()">-->
+            <!--<i class="fa fa-sign-out" aria-hidden="true"></i>Logout-->
+        <!--</a>-->
+      <!--&lt;!&ndash;<a routerLink="/about" class="nav-item nav-link" routerLinkActive="active">&ndash;&gt;-->
+      <!--&lt;!&ndash;<i class="fa fa-info-circle"></i> About&ndash;&gt;-->
+      <!--&lt;!&ndash;</a>&ndash;&gt;-->
+    <!--</div>-->
+<!--</nav>-->
