--- a/client/app/find-route/find-route.component.scss
+++ b/client/app/find-route/find-route.component.scss
@@ -1,3 +1,8 @@
 .sebm-google-map-container {
   height: 500px;
 }
+//.find-route-section {
+//  background: url('../images/devices.jpg') center top no-repeat;
+//  background-size: cover;
+//  height: 400px;
+//}
