finished landing page

--- a/client/app/find-route/find-route.component.scss
+++ b/client/app/find-route/find-route.component.scss
@@ -2,7 +2,7 @@
   height: 500px;
 }
 //.find-route-section {
-//  background: url('../images/devices.jpg') center top no-repeat;
+//  background: url('../images/img1.jpg') center top no-repeat;
 //  background-size: cover;
 //  height: 400px;
 //}
