--- a/client/app/home/home.component.scss
+++ b/client/app/home/home.component.scss
@@ -159,7 +159,7 @@ a img{
   height: 800px;
   width: auto;
   background-color: #f3f3f3;
-  background: url('../images/wear.png') center 30% no-repeat;
+  background: url('../images/img2.jpg') center 30% no-repeat;
   background-size: cover;
 }
 
@@ -286,9 +286,9 @@ a img{
 
 .ridein-wear-section {
   position: relative;
-  background: url('../images/wear.png') center top no-repeat;
+  //background: url('../images/img1.jpg') center top no-repeat;
   background-size: cover;
-  height: 800px;
+  //height: 800px;
 }
 
 .ridein-wear-band {
@@ -357,9 +357,9 @@ a img{
 }
 
 .ridein-customized-section-image {
-  background: url('../images/devices.jpg') center top no-repeat;
+  //background: url('../images/devices.jpg') center top no-repeat;
   background-size: cover;
-  height: 400px;
+  //height: 400px;
 }
 
 .ridein-more-section {
