--- a/client/app/map/map.component.html
+++ b/client/app/map/map.component.html
@@ -23,13 +23,13 @@
 
     </sebm-google-map>
 
-    <!--<div class="list-group" *ngFor="let x of routes; let i = index">-->
-      <!--<button-->
-              <!--class="list-group-item list-group-item-action"-->
-              <!--(click)="tempClicked(i)">-->
-        <!--From {{ x.origin.formatted_address }} to {{ x.destination.formatted_address }}-->
-      <!--</button>-->
-    <!--</div>-->
+    <div class="list-group" *ngFor="let x of routes; let i = index">
+      <button
+              class="list-group-item list-group-item-action"
+              (click)="tempClicked(i)">
+        From {{ x.origin.formatted_address }} to {{ x.destination.formatted_address }}
+      </button>
+    </div>
 
   </div>
 
