Fixes naming of app in the whole bloody project footers

--- a/client/app/find-route/find-route.component.html
+++ b/client/app/find-route/find-route.component.html
@@ -57,6 +57,6 @@
 
   <footer class="ridein-footer mdl-mega-footer">
     <div class="mdl-mega-footer--middle-section">
-      <p class="mdl-typography--font-light">© 2017 RideIn</p>
+      <p class="mdl-typography--font-light">© 2017 InRide</p>
     </div>
   </footer>
