--- a/client/app/map/map.component.html
+++ b/client/app/map/map.component.html
@@ -35,7 +35,7 @@
 
   <footer class="ridein-footer mdl-mega-footer">
     <div class="mdl-mega-footer--middle-section">
-      <p class="mdl-typography--font-light">© 2017 RideIn</p>
+      <p class="mdl-typography--font-light">© 2017 InRide</p>
     </div>
   </footer>
 
