--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -17,7 +17,7 @@
     <div class="ridein-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
         <span class="android-title mdl-layout-title">
-            <img class="ridein-logo-image" src="">
+            <img class="ridein-logo-image" src="images/logo.jpg">
           </span>
             <!-- Add spacer, to align navigation to the right in desktop -->
             <div class="ridein-header-spacer mdl-layout-spacer"></div>
