--- a/client/app/home/home.component.html
+++ b/client/app/home/home.component.html
@@ -9,7 +9,7 @@
 <div class="ridein-wear-section">
     <div class="ridein-wear-band">
         <div class="ridein-wear-band-text">
-            <div class="mdl-typography--display-2 mdl-typography--font-thin">Are you going somewhere?</div>
+            <div class="mdl-typography--display-2 mdl-typography--font-thin">Are you going somewhere</div>
             <p class="mdl-typography--headline mdl-typography--font-thin">
                 Where do you want to arrive?
             </p>
