Fixes LOGO not showing

--- a/client/app/app.component.scss
+++ b/client/app/app.component.scss
@@ -46,8 +46,7 @@ a img{
 
 
 .ridein-logo-image {
-  height: 28px;
-  width: 140px;
+  height: 10vh;
 }
 
 
@@ -152,6 +151,7 @@ a img{
 .ridein-drawer .ridein-logo-image {
   position: absolute;
   bottom: 16px;
+  width: 2vw;
 }
 
 .ridein-be-together-section {
