Adds Profile component

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -34,6 +34,10 @@
                         <i class="fa fa-location-arrow" aria-hidden="true"></i> Offer Ride
                     </a>
 
+                    <a routerLink="/profile" class="mdl-navigation__link mdl-typography--text-uppercase" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+                        <i class="fa fa-user" aria-hidden="true"></i> Profile
+                    </a>
+
                     <a class="mdl-navigation__link mdl-typography--text-uppercase ridein-link" routerLinkActive="active" (click)="logout()">
                         <i class="fa fa-sign-out" aria-hidden="true" ></i>Logout
                     </a>
