--- a/client/app/login-page/login-page.component.html
+++ b/client/app/login-page/login-page.component.html
@@ -1,6 +1,64 @@
-<div class="modal-dialog">
-  <div class="loginmodal-container">
-    <h1>Login to Your Account</h1><br>
-    <button class="login loginmodal-submit" (click)="login()">Login With Google</button>
+<div class="top-content">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2 text">
+        <h1 id="logo"><img src="assets/logo.png"/></h1>
+
+      </div>
+    </div>
+
+
+    <div class="row login-form" style="display: block;margin-top: 50px;">
+      <div class="col-sm-4 col-sm-offset-1">
+        <div class="social-login">
+
+          <div class="social-login-buttons">
+            <p>Login with Google</p>
+            <a><button type="submit" (click)="login()" class="btn"><i style="font-size: 40px; line-height: 60px;" class="fa fa-google-plus"></i> Sign in!</button></a>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 forms-right-icons">
+        <div class="row">
+          <div class="col-sm-2 icon"><i class="fa fa-pencil"></i></div>
+          <div class="col-sm-10">
+            <h3>Easy to Use</h3>
+            <p>We offer you the easiest way to use our application.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 icon"><i class="fa fa-commenting"></i></div>
+          <div class="col-sm-10">
+            <h3>Awesome Login</h3>
+            <p>You have to do only one thing to access our application. The Google Login is the easiest way to do it. Enjoy it.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 icon"><i class="fa fa-magic"></i></div>
+          <div class="col-sm-10">
+            <h3>Free Access</h3>
+            <p>Whole access to our application is free, so you will not have to pay for some things, just feel free using it.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
+
+<!-- Footer -->
+<footer>
+  <div class="container">
+    <div class="row">
+
+      <div class="col-sm-8 col-sm-offset-2">
+        <div class="footer-border"></div>
+        <p>Made by <a href="#" target="_blank">inride Inc.</a>.</p>
+      </div>
+
+    </div>
+  </div>
+</footer>
+<div class="backstretch" style="left: 0px; top: 0px; overflow: hidden; margin: 0px; padding: 0px; height: 100%; width: 100%; z-index: -999999; position: fixed;"><img src="assets/back1.png" style="position: absolute; margin: 0px; padding: 0px; border: none; width: 1920px; height: 1280px; max-height: none; max-width: none; z-index: -999999; left: 0px; top: -189.5px;"></div>
