added user phone

--- a/client/app/profile/profile.component.html
+++ b/client/app/profile/profile.component.html
@@ -1,7 +1,8 @@
 <div style="align-items: center; align-content: center; text-align: center;">
 	<i class="material-icons  mdl-list__item-avatar">person</i>
-	<h1>{{current?.displayName}}</h1>
-	<h2>{{current?.email}}</h2>
+	<h1>{{current?.userName}}</h1>
+	<h2>{{current?.phone}}</h2>
+	<h3>{{current?.email}}</h3>
 </div>
 <footer class="ridein-footer mdl-mega-footer">
 	<div class="mdl-mega-footer--middle-section">
