--- a/client/app/find-route/find-route.component.html
+++ b/client/app/find-route/find-route.component.html
@@ -18,7 +18,7 @@
             <span class="mdl-list__item-primary-content">
                   <!--<img [src]="x.user.userPicture" alt="">-->
                   <i class="material-icons  mdl-list__item-avatar">person</i>
-                  <span>{{x.user.userName}}</span>
+                  <span>{{x.user.userName}} - {{x.user.phone}}</span>
                   <span class="mdl-list__item-text-body">
                     {{ x.origin.formatted_address }} -> {{ x.destination.formatted_address }}
                   </span>
