--- a/client/app/login-page/login-page.component.html
+++ b/client/app/login-page/login-page.component.html
@@ -55,7 +55,7 @@
 
       <div class="col-sm-8 col-sm-offset-2">
         <div class="footer-border"></div>
-        <p>Made by <a href="#" target="_blank">inride Inc.</a>.</p>
+        <p>Made by <a href="#" target="_blank">InRide</a></p>
       </div>
 
     </div>
