--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,19 +1,5 @@
-<head >
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="author" content="RideIn">
-    <meta name="description" content="Your Ride Sharing App">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>RideIn</title>
 
-    <!-- Page styles -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css">
-
-</head>
-<body *ngIf="isLoggedIn">
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+<div *ngIf="isLoggedIn" class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <div class="ridein-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
         <span class="android-title mdl-layout-title">
@@ -47,9 +33,6 @@
     </div>
 
 </div>
-<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-</body>
-
 <div class="app-content">
     <router-outlet></router-outlet>
 </div>
