Adds View in profile for attending routes for a user

--- a/client/app/find-route/find-route.component.scss
+++ b/client/app/find-route/find-route.component.scss
@@ -1,11 +1,11 @@
 .sebm-google-map-container {
   height: 500px;
 }
-//.find-route-section {
-//  background: url('../images/img1.jpg') center top no-repeat;
-//  background-size: cover;
-//  height: 400px;
-//}
+/*.find-route-section {*/
+  /*background: url('../images/img1.jpg') center top no-repeat;*/
+  /*background-size: cover;*/
+  /*height: 400px;*/
+/*}*/
 button.mdl-button{
   padding-top: 0px;
 }
