Adds option to remove yourself from an attended route

--- a/client/app/profile/profile.component.html
+++ b/client/app/profile/profile.component.html
@@ -15,7 +15,7 @@
             </span>
         <span class="mdl-list__item-secondary-content">
             <button
-              class="list-group-item list-group-item-action mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+              class="list-group-item list-group-item-action mdl-button mdl-js-button mdl-button--raised mdl-button--colored" (click)="deleteUserRoute(i)">
                  Leave
             </button>
         </span>
